--- a/rust/raze/remote/BUILD.bitflags-1.3.2.bazel
+++ b/rust/raze/remote/BUILD.bitflags-1.3.2.bazel
@@ -34,9 +34,6 @@ licenses([
 rust_library(
     name = "bitflags",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -45,6 +42,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=bitflags",
         "manual",
     ],
     version = "1.3.2",
