--- a/rust/raze/remote/BUILD.grpc-compiler-0.8.3.bazel
+++ b/rust/raze/remote/BUILD.grpc-compiler-0.8.3.bazel
@@ -36,8 +36,6 @@ rust_binary(
     # N.B.: The exact form of this is subject to change.
     name = "cargo_bin_protoc_gen_rust_grpc",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/bin/protoc-gen-rust-grpc.rs",
     data = [],
     edition = "2018",
@@ -46,6 +44,7 @@ rust_binary(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=protoc-gen-rust-grpc",
         "manual",
     ],
     version = "0.8.3",
@@ -60,8 +59,6 @@ rust_binary(
 rust_library(
     name = "grpc_compiler",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -70,6 +67,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=grpc-compiler",
         "manual",
     ],
     version = "0.8.3",
