--- a/rust/raze/remote/BUILD.json-0.12.4.bazel
+++ b/rust/raze/remote/BUILD.json-0.12.4.bazel
@@ -36,8 +36,6 @@ licenses([
 rust_library(
     name = "json",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -46,6 +44,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=json",
         "manual",
     ],
     version = "0.12.4",
