--- a/rust/raze/remote/BUILD.rdrand-0.4.0.bazel
+++ b/rust/raze/remote/BUILD.rdrand-0.4.0.bazel
@@ -40,10 +40,6 @@ licenses([
 rust_library(
     name = "rdrand",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -52,6 +48,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=rdrand",
         "manual",
     ],
     version = "0.4.0",
