--- a/rust/raze/remote/BUILD.anyhow-1.0.58.bazel
+++ b/rust/raze/remote/BUILD.anyhow-1.0.58.bazel
@@ -38,14 +38,10 @@ load(
 )
 
 cargo_build_script(
-    name = "futures_task_build_script",
+    name = "anyhow_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "alloc",
-        "std",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -56,19 +52,15 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.18",
+    version = "1.0.58",
     visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
 rust_library(
-    name = "futures_task",
+    name = "anyhow",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "alloc",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -77,11 +69,40 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=anyhow",
         "manual",
     ],
-    version = "0.3.18",
+    version = "1.0.58",
     # buildifier: leave-alone
     deps = [
-        ":futures_task_build_script",
+        ":anyhow_build_script",
     ],
 )
+
+# Unsupported target "compiletest" with type "test" omitted
+
+# Unsupported target "test_autotrait" with type "test" omitted
+
+# Unsupported target "test_backtrace" with type "test" omitted
+
+# Unsupported target "test_boxed" with type "test" omitted
+
+# Unsupported target "test_chain" with type "test" omitted
+
+# Unsupported target "test_context" with type "test" omitted
+
+# Unsupported target "test_convert" with type "test" omitted
+
+# Unsupported target "test_downcast" with type "test" omitted
+
+# Unsupported target "test_ensure" with type "test" omitted
+
+# Unsupported target "test_ffi" with type "test" omitted
+
+# Unsupported target "test_fmt" with type "test" omitted
+
+# Unsupported target "test_macros" with type "test" omitted
+
+# Unsupported target "test_repr" with type "test" omitted
+
+# Unsupported target "test_source" with type "test" omitted
