--- a/rust/raze/remote/BUILD.base64-0.9.3.bazel
+++ b/rust/raze/remote/BUILD.base64-0.9.3.bazel
@@ -38,8 +38,6 @@ licenses([
 rust_library(
     name = "base64",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -48,6 +46,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=base64",
         "manual",
     ],
     version = "0.9.3",
