--- a/rust/raze/remote/BUILD.byteorder-1.4.3.bazel
+++ b/rust/raze/remote/BUILD.byteorder-1.4.3.bazel
@@ -36,10 +36,6 @@ licenses([
 rust_library(
     name = "byteorder",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -48,6 +44,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=byteorder",
         "manual",
     ],
     version = "1.4.3",
