--- a/rust/raze/remote/BUILD.bytes-0.5.6.bazel
+++ b/rust/raze/remote/BUILD.bytes-0.5.6.bazel
@@ -40,10 +40,6 @@ licenses([
 rust_library(
     name = "bytes",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -52,6 +48,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=bytes",
         "manual",
     ],
     version = "0.5.6",
