--- a/rust/raze/remote/BUILD.cloudabi-0.0.3.bazel
+++ b/rust/raze/remote/BUILD.cloudabi-0.0.3.bazel
@@ -34,10 +34,6 @@ licenses([
 rust_library(
     name = "cloudabi",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "bitflags",
-        "default",
-    ],
     crate_root = "cloudabi.rs",
     data = [],
     edition = "2015",
@@ -46,6 +42,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=cloudabi",
         "manual",
     ],
     version = "0.0.3",
