--- a/rust/raze/remote/BUILD.fastrand-1.7.0.bazel
+++ b/rust/raze/remote/BUILD.fastrand-1.7.0.bazel
@@ -31,33 +31,38 @@ licenses([
 
 # Generated Targets
 
-# Unsupported target "integers" with type "example" omitted
-
-# Unsupported target "paths" with type "example" omitted
-
-# Unsupported target "traits" with type "example" omitted
-
-# Unsupported target "versions" with type "example" omitted
+# Unsupported target "bench" with type "bench" omitted
 
 rust_library(
-    name = "autocfg",
+    name = "fastrand",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
+    aliases = {
+    },
     crate_root = "src/lib.rs",
     data = [],
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-raze",
+        "crate-name=fastrand",
         "manual",
     ],
-    version = "0.1.7",
+    version = "1.7.0",
     # buildifier: leave-alone
     deps = [
-    ],
+    ] + selects.with_or({
+        (
+            "@rules_rust//rust/platform:wasm32-unknown-unknown",
+            "@rules_rust//rust/platform:wasm32-wasi",
+        ): [
+            "@raze__instant__0_1_12//:instant",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
-# Unsupported target "rustflags" with type "test" omitted
+# Unsupported target "char" with type "test" omitted
+
+# Unsupported target "smoke" with type "test" omitted
