--- a/rust/raze/remote/BUILD.fuchsia-zircon-sys-0.3.3.bazel
+++ b/rust/raze/remote/BUILD.fuchsia-zircon-sys-0.3.3.bazel
@@ -36,8 +36,6 @@ licenses([
 rust_library(
     name = "fuchsia_zircon_sys",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -46,6 +44,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=fuchsia-zircon-sys",
         "manual",
     ],
     version = "0.3.3",
