--- a/rust/raze/remote/BUILD.futures-0.3.17.bazel
+++ b/rust/raze/remote/BUILD.futures-0.3.17.bazel
@@ -34,14 +34,6 @@ licenses([
 rust_library(
     name = "futures",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "alloc",
-        "async-await",
-        "default",
-        "executor",
-        "futures-executor",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -50,18 +42,19 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=futures",
         "manual",
     ],
     version = "0.3.17",
     # buildifier: leave-alone
     deps = [
-        "@raze__futures_channel__0_3_18//:futures_channel",
-        "@raze__futures_core__0_3_18//:futures_core",
-        "@raze__futures_executor__0_3_18//:futures_executor",
-        "@raze__futures_io__0_3_18//:futures_io",
-        "@raze__futures_sink__0_3_18//:futures_sink",
-        "@raze__futures_task__0_3_18//:futures_task",
-        "@raze__futures_util__0_3_18//:futures_util",
+        "@raze__futures_channel__0_3_21//:futures_channel",
+        "@raze__futures_core__0_3_21//:futures_core",
+        "@raze__futures_executor__0_3_21//:futures_executor",
+        "@raze__futures_io__0_3_21//:futures_io",
+        "@raze__futures_sink__0_3_21//:futures_sink",
+        "@raze__futures_task__0_3_21//:futures_task",
+        "@raze__futures_util__0_3_21//:futures_util",
     ],
 )
 
