--- a/rust/raze/remote/BUILD.futures-channel-0.3.21.bazel
+++ b/rust/raze/remote/BUILD.futures-channel-0.3.21.bazel
@@ -26,7 +26,7 @@ package(default_visibility = [
 ])
 
 licenses([
-    "unencumbered",  # Unlicense from expression "Unlicense OR MIT"
+    "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
 # Generated Targets
@@ -38,14 +38,10 @@ load(
 )
 
 cargo_build_script(
-    name = "memchr_build_script",
+    name = "futures_channel_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -56,19 +52,17 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "2.4.1",
+    version = "0.3.21",
     visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
+# Unsupported target "sync_mpsc" with type "bench" omitted
+
 rust_library(
-    name = "memchr",
+    name = "futures_channel",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -77,11 +71,22 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=futures-channel",
         "manual",
     ],
-    version = "2.4.1",
+    version = "0.3.21",
     # buildifier: leave-alone
     deps = [
-        ":memchr_build_script",
+        ":futures_channel_build_script",
+        "@raze__futures_core__0_3_21//:futures_core",
+        "@raze__futures_sink__0_3_21//:futures_sink",
     ],
 )
+
+# Unsupported target "channel" with type "test" omitted
+
+# Unsupported target "mpsc" with type "test" omitted
+
+# Unsupported target "mpsc-close" with type "test" omitted
+
+# Unsupported target "oneshot" with type "test" omitted
