--- a/rust/raze/remote/BUILD.futures-core-0.3.21.bazel
+++ b/rust/raze/remote/BUILD.futures-core-0.3.21.bazel
@@ -38,25 +38,10 @@ load(
 )
 
 cargo_build_script(
-    name = "futures_util_build_script",
+    name = "futures_core_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "alloc",
-        "async-await",
-        "async-await-macro",
-        "channel",
-        "futures-channel",
-        "futures-io",
-        "futures-macro",
-        "futures-sink",
-        "io",
-        "memchr",
-        "sink",
-        "slab",
-        "std",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -67,57 +52,29 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.18",
+    version = "0.3.21",
     visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
-# Unsupported target "futures_unordered" with type "bench" omitted
-
 rust_library(
-    name = "futures_util",
+    name = "futures_core",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "alloc",
-        "async-await",
-        "async-await-macro",
-        "channel",
-        "futures-channel",
-        "futures-io",
-        "futures-macro",
-        "futures-sink",
-        "io",
-        "memchr",
-        "sink",
-        "slab",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
-    proc_macro_deps = [
-        "@raze__futures_macro__0_3_18//:futures_macro",
-    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-raze",
+        "crate-name=futures-core",
         "manual",
     ],
-    version = "0.3.18",
+    version = "0.3.21",
     # buildifier: leave-alone
     deps = [
-        ":futures_util_build_script",
-        "@raze__futures_channel__0_3_18//:futures_channel",
-        "@raze__futures_core__0_3_18//:futures_core",
-        "@raze__futures_io__0_3_18//:futures_io",
-        "@raze__futures_sink__0_3_18//:futures_sink",
-        "@raze__futures_task__0_3_18//:futures_task",
-        "@raze__memchr__2_4_1//:memchr",
-        "@raze__pin_project_lite__0_2_7//:pin_project_lite",
-        "@raze__pin_utils__0_1_0//:pin_utils",
-        "@raze__slab__0_4_5//:slab",
+        ":futures_core_build_script",
     ],
 )
