--- a/rust/raze/remote/BUILD.futures-task-0.3.21.bazel
+++ b/rust/raze/remote/BUILD.futures-task-0.3.21.bazel
@@ -38,14 +38,10 @@ load(
 )
 
 cargo_build_script(
-    name = "futures_core_build_script",
+    name = "futures_task_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "alloc",
-        "std",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -56,19 +52,15 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "0.3.18",
+    version = "0.3.21",
     visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
 rust_library(
-    name = "futures_core",
+    name = "futures_task",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "alloc",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -77,11 +69,12 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=futures-task",
         "manual",
     ],
-    version = "0.3.18",
+    version = "0.3.21",
     # buildifier: leave-alone
     deps = [
-        ":futures_core_build_script",
+        ":futures_task_build_script",
     ],
 )
