--- a/rust/raze/remote/BUILD.hashbrown-0.12.1.bazel
+++ b/rust/raze/remote/BUILD.hashbrown-0.12.1.bazel
@@ -31,28 +31,34 @@ licenses([
 
 # Generated Targets
 
-# Unsupported target "xid" with type "bench" omitted
+# Unsupported target "bench" with type "bench" omitted
+
+# Unsupported target "insert_unique_unchecked" with type "bench" omitted
 
 rust_library(
-    name = "unicode_xid",
+    name = "hashbrown",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-    ],
     crate_root = "src/lib.rs",
     data = [],
-    edition = "2015",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-raze",
+        "crate-name=hashbrown",
         "manual",
     ],
-    version = "0.2.2",
+    version = "0.12.1",
     # buildifier: leave-alone
     deps = [
     ],
 )
 
-# Unsupported target "exhaustive_tests" with type "test" omitted
+# Unsupported target "hasher" with type "test" omitted
+
+# Unsupported target "rayon" with type "test" omitted
+
+# Unsupported target "serde" with type "test" omitted
+
+# Unsupported target "set" with type "test" omitted
