--- a/rust/raze/remote/BUILD.httpbis-0.9.1.bazel
+++ b/rust/raze/remote/BUILD.httpbis-0.9.1.bazel
@@ -42,8 +42,6 @@ cargo_build_script(
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -58,7 +56,6 @@ cargo_build_script(
     visibility = ["//visibility:private"],
     deps = [
     ] + selects.with_or({
-        # cfg(unix)
         (
             "@rules_rust//rust/platform:i686-apple-darwin",
             "@rules_rust//rust/platform:i686-unknown-linux-gnu",
@@ -66,9 +63,11 @@ cargo_build_script(
             "@rules_rust//rust/platform:x86_64-unknown-linux-gnu",
             "@rules_rust//rust/platform:aarch64-apple-darwin",
             "@rules_rust//rust/platform:aarch64-apple-ios",
+            "@rules_rust//rust/platform:aarch64-apple-ios-sim",
             "@rules_rust//rust/platform:aarch64-linux-android",
             "@rules_rust//rust/platform:aarch64-unknown-linux-gnu",
             "@rules_rust//rust/platform:arm-unknown-linux-gnueabi",
+            "@rules_rust//rust/platform:armv7-linux-androideabi",
             "@rules_rust//rust/platform:i686-linux-android",
             "@rules_rust//rust/platform:i686-unknown-freebsd",
             "@rules_rust//rust/platform:powerpc-unknown-linux-gnu",
@@ -89,8 +88,6 @@ rust_binary(
     srcs = glob(["**/*.rs"]),
     aliases = {
     },
-    crate_features = [
-    ],
     crate_root = "src/bin/client_server_loop.rs",
     data = [],
     edition = "2018",
@@ -99,6 +96,7 @@ rust_binary(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=client_server_loop",
         "manual",
     ],
     version = "0.9.1",
@@ -108,7 +106,7 @@ rust_binary(
         ":httpbis_build_script",
         "@raze__bytes__0_5_6//:bytes",
         "@raze__futures__0_3_17//:futures",
-        "@raze__log__0_4_14//:log",
+        "@raze__log__0_4_17//:log",
         "@raze__log_ndc__0_2_0//:log_ndc",
         "@raze__net2__0_2_37//:net2",
         "@raze__rand__0_5_6//:rand",
@@ -117,7 +115,6 @@ rust_binary(
         "@raze__tokio__0_2_25//:tokio",
         "@raze__void__1_0_2//:void",
     ] + selects.with_or({
-        # cfg(unix)
         (
             "@rules_rust//rust/platform:i686-apple-darwin",
             "@rules_rust//rust/platform:i686-unknown-linux-gnu",
@@ -125,9 +122,11 @@ rust_binary(
             "@rules_rust//rust/platform:x86_64-unknown-linux-gnu",
             "@rules_rust//rust/platform:aarch64-apple-darwin",
             "@rules_rust//rust/platform:aarch64-apple-ios",
+            "@rules_rust//rust/platform:aarch64-apple-ios-sim",
             "@rules_rust//rust/platform:aarch64-linux-android",
             "@rules_rust//rust/platform:aarch64-unknown-linux-gnu",
             "@rules_rust//rust/platform:arm-unknown-linux-gnueabi",
+            "@rules_rust//rust/platform:armv7-linux-androideabi",
             "@rules_rust//rust/platform:i686-linux-android",
             "@rules_rust//rust/platform:i686-unknown-freebsd",
             "@rules_rust//rust/platform:powerpc-unknown-linux-gnu",
@@ -151,8 +150,6 @@ rust_library(
     srcs = glob(["**/*.rs"]),
     aliases = {
     },
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -161,6 +158,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=httpbis",
         "manual",
     ],
     version = "0.9.1",
@@ -169,7 +167,7 @@ rust_library(
         ":httpbis_build_script",
         "@raze__bytes__0_5_6//:bytes",
         "@raze__futures__0_3_17//:futures",
-        "@raze__log__0_4_14//:log",
+        "@raze__log__0_4_17//:log",
         "@raze__log_ndc__0_2_0//:log_ndc",
         "@raze__net2__0_2_37//:net2",
         "@raze__rand__0_5_6//:rand",
@@ -178,7 +176,6 @@ rust_library(
         "@raze__tokio__0_2_25//:tokio",
         "@raze__void__1_0_2//:void",
     ] + selects.with_or({
-        # cfg(unix)
         (
             "@rules_rust//rust/platform:i686-apple-darwin",
             "@rules_rust//rust/platform:i686-unknown-linux-gnu",
@@ -186,9 +183,11 @@ rust_library(
             "@rules_rust//rust/platform:x86_64-unknown-linux-gnu",
             "@rules_rust//rust/platform:aarch64-apple-darwin",
             "@rules_rust//rust/platform:aarch64-apple-ios",
+            "@rules_rust//rust/platform:aarch64-apple-ios-sim",
             "@rules_rust//rust/platform:aarch64-linux-android",
             "@rules_rust//rust/platform:aarch64-unknown-linux-gnu",
             "@rules_rust//rust/platform:arm-unknown-linux-gnueabi",
+            "@rules_rust//rust/platform:armv7-linux-androideabi",
             "@rules_rust//rust/platform:i686-linux-android",
             "@rules_rust//rust/platform:i686-unknown-freebsd",
             "@rules_rust//rust/platform:powerpc-unknown-linux-gnu",
