--- a/rust/raze/remote/BUILD.instant-0.1.12.bazel
+++ b/rust/raze/remote/BUILD.instant-0.1.12.bazel
@@ -26,18 +26,14 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT"
+    "notice",  # BSD-3-Clause from expression "BSD-3-Clause"
 ])
 
 # Generated Targets
 
 rust_library(
-    name = "slab",
+    name = "instant",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -46,14 +42,14 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=instant",
         "manual",
     ],
-    version = "0.4.5",
+    version = "0.1.12",
     # buildifier: leave-alone
     deps = [
+        "@raze__cfg_if__1_0_0//:cfg_if",
     ],
 )
 
-# Unsupported target "serde" with type "test" omitted
-
-# Unsupported target "slab" with type "test" omitted
+# Unsupported target "wasm" with type "test" omitted
