--- a/rust/raze/remote/BUILD.log-ndc-0.2.0.bazel
+++ b/rust/raze/remote/BUILD.log-ndc-0.2.0.bazel
@@ -34,8 +34,6 @@ licenses([
 rust_library(
     name = "log_ndc",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -44,11 +42,12 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=log-ndc",
         "manual",
     ],
     version = "0.2.0",
     # buildifier: leave-alone
     deps = [
-        "@raze__log__0_4_14//:log",
+        "@raze__log__0_4_17//:log",
     ],
 )
