--- a/rust/raze/remote/BUILD.mio-0.6.23.bazel
+++ b/rust/raze/remote/BUILD.mio-0.6.23.bazel
@@ -36,10 +36,6 @@ rust_library(
     srcs = glob(["**/*.rs"]),
     aliases = {
     },
-    crate_features = [
-        "default",
-        "with-deprecated",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -48,6 +44,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=mio",
         "manual",
     ],
     version = "0.6.23",
@@ -55,11 +52,10 @@ rust_library(
     deps = [
         "@raze__cfg_if__0_1_10//:cfg_if",
         "@raze__iovec__0_1_4//:iovec",
-        "@raze__log__0_4_14//:log",
+        "@raze__log__0_4_17//:log",
         "@raze__net2__0_2_37//:net2",
-        "@raze__slab__0_4_5//:slab",
+        "@raze__slab__0_4_6//:slab",
     ] + selects.with_or({
-        # cfg(unix)
         (
             "@rules_rust//rust/platform:i686-apple-darwin",
             "@rules_rust//rust/platform:i686-unknown-linux-gnu",
@@ -67,9 +63,11 @@ rust_library(
             "@rules_rust//rust/platform:x86_64-unknown-linux-gnu",
             "@rules_rust//rust/platform:aarch64-apple-darwin",
             "@rules_rust//rust/platform:aarch64-apple-ios",
+            "@rules_rust//rust/platform:aarch64-apple-ios-sim",
             "@rules_rust//rust/platform:aarch64-linux-android",
             "@rules_rust//rust/platform:aarch64-unknown-linux-gnu",
             "@rules_rust//rust/platform:arm-unknown-linux-gnueabi",
+            "@rules_rust//rust/platform:armv7-linux-androideabi",
             "@rules_rust//rust/platform:i686-linux-android",
             "@rules_rust//rust/platform:i686-unknown-freebsd",
             "@rules_rust//rust/platform:powerpc-unknown-linux-gnu",
@@ -78,11 +76,10 @@ rust_library(
             "@rules_rust//rust/platform:x86_64-linux-android",
             "@rules_rust//rust/platform:x86_64-unknown-freebsd",
         ): [
-            "@raze__libc__0_2_108//:libc",
+            "@raze__libc__0_2_126//:libc",
         ],
         "//conditions:default": [],
     }) + selects.with_or({
-        # cfg(windows)
         (
             "@rules_rust//rust/platform:i686-pc-windows-msvc",
             "@rules_rust//rust/platform:x86_64-pc-windows-msvc",
