--- a/rust/raze/remote/BUILD.once_cell-1.13.0.bazel
+++ b/rust/raze/remote/BUILD.once_cell-1.13.0.bazel
@@ -31,12 +31,23 @@ licenses([
 
 # Generated Targets
 
+# Unsupported target "bench" with type "example" omitted
+
+# Unsupported target "bench_acquire" with type "example" omitted
+
+# Unsupported target "bench_vs_lazy_static" with type "example" omitted
+
+# Unsupported target "lazy_static" with type "example" omitted
+
+# Unsupported target "reentrant_init_deadlocks" with type "example" omitted
+
+# Unsupported target "regex" with type "example" omitted
+
+# Unsupported target "test_synchronization" with type "example" omitted
+
 rust_library(
-    name = "futures_io",
+    name = "once_cell",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -45,10 +56,13 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=once_cell",
         "manual",
     ],
-    version = "0.3.18",
+    version = "1.13.0",
     # buildifier: leave-alone
     deps = [
     ],
 )
+
+# Unsupported target "it" with type "test" omitted
