--- a/rust/raze/remote/BUILD.proc-macro2-1.0.40.bazel
+++ b/rust/raze/remote/BUILD.proc-macro2-1.0.40.bazel
@@ -42,10 +42,6 @@ cargo_build_script(
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "default",
-        "proc-macro",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -56,7 +52,7 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "1.0.32",
+    version = "1.0.40",
     visibility = ["//visibility:private"],
     deps = [
     ],
@@ -65,10 +61,6 @@ cargo_build_script(
 rust_library(
     name = "proc_macro2",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "proc-macro",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -77,13 +69,14 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=proc-macro2",
         "manual",
     ],
-    version = "1.0.32",
+    version = "1.0.40",
     # buildifier: leave-alone
     deps = [
         ":proc_macro2_build_script",
-        "@raze__unicode_xid__0_2_2//:unicode_xid",
+        "@raze__unicode_ident__1_0_1//:unicode_ident",
     ],
 )
 
