--- a/rust/raze/remote/BUILD.protobuf-2.18.2.bazel
+++ b/rust/raze/remote/BUILD.protobuf-2.18.2.bazel
@@ -42,10 +42,6 @@ cargo_build_script(
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "bytes",
-        "with-bytes",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -69,10 +65,6 @@ cargo_build_script(
 rust_library(
     name = "protobuf",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "bytes",
-        "with-bytes",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -81,6 +73,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=protobuf",
         "manual",
     ],
     version = "2.18.2",
