--- a/rust/raze/remote/BUILD.protobuf-3.1.0.bazel
+++ b/rust/raze/remote/BUILD.protobuf-3.1.0.bazel
@@ -26,7 +26,7 @@ package(default_visibility = [
 ])
 
 licenses([
-    "notice",  # MIT from expression "MIT OR Apache-2.0"
+    "notice",  # MIT from expression "MIT"
 ])
 
 # Generated Targets
@@ -38,16 +38,13 @@ load(
 )
 
 cargo_build_script(
-    name = "log_build_script",
+    name = "protobuf_build_script",
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "std",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
-    edition = "2015",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
@@ -55,38 +52,39 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "0.4.14",
+    version = "3.1.0",
     visibility = ["//visibility:private"],
     deps = [
     ],
 )
 
-# Unsupported target "value" with type "bench" omitted
+# Unsupported target "coded_input_stream" with type "bench" omitted
+
+# Unsupported target "coded_output_stream" with type "bench" omitted
+
+# Unsupported target "write" with type "bench" omitted
 
 rust_library(
-    name = "log",
+    name = "protobuf",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
-    edition = "2015",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-raze",
+        "crate-name=protobuf",
         "manual",
     ],
-    version = "0.4.14",
+    version = "3.1.0",
     # buildifier: leave-alone
     deps = [
-        ":log_build_script",
-        "@raze__cfg_if__1_0_0//:cfg_if",
+        ":protobuf_build_script",
+        "@raze__bytes__1_1_0//:bytes",
+        "@raze__once_cell__1_13_0//:once_cell",
+        "@raze__protobuf_support__3_1_0//:protobuf_support",
+        "@raze__thiserror__1_0_31//:thiserror",
     ],
 )
-
-# Unsupported target "filters" with type "test" omitted
-
-# Unsupported target "macros" with type "test" omitted
