--- a/rust/raze/remote/BUILD.protobuf-codegen-2.18.2.bazel
+++ b/rust/raze/remote/BUILD.protobuf-codegen-2.18.2.bazel
@@ -36,8 +36,6 @@ rust_binary(
     # N.B.: The exact form of this is subject to change.
     name = "cargo_bin_protobuf_bin_gen_rust_do_not_use",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/bin/protobuf-bin-gen-rust-do-not-use.rs",
     data = [],
     edition = "2015",
@@ -46,6 +44,7 @@ rust_binary(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=protobuf-bin-gen-rust-do-not-use",
         "manual",
     ],
     version = "2.18.2",
@@ -61,8 +60,6 @@ rust_binary(
     # N.B.: The exact form of this is subject to change.
     name = "cargo_bin_protoc_gen_rust",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/bin/protoc-gen-rust.rs",
     data = [],
     edition = "2015",
@@ -71,6 +68,7 @@ rust_binary(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=protoc-gen-rust",
         "manual",
     ],
     version = "2.18.2",
@@ -84,8 +82,6 @@ rust_binary(
 rust_library(
     name = "protobuf_codegen",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -94,6 +90,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=protobuf-codegen",
         "manual",
     ],
     version = "2.18.2",
