--- a/rust/raze/remote/BUILD.rand_core-0.3.1.bazel
+++ b/rust/raze/remote/BUILD.rand_core-0.3.1.bazel
@@ -34,10 +34,6 @@ licenses([
 rust_library(
     name = "rand_core",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "alloc",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -46,6 +42,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=rand_core",
         "manual",
     ],
     version = "0.3.1",
