--- a/rust/raze/remote/BUILD.rand_pcg-0.1.2.bazel
+++ b/rust/raze/remote/BUILD.rand_pcg-0.1.2.bazel
@@ -42,8 +42,6 @@ cargo_build_script(
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2015",
@@ -57,15 +55,13 @@ cargo_build_script(
     version = "0.1.2",
     visibility = ["//visibility:private"],
     deps = [
-        "@raze__autocfg__0_1_7//:autocfg",
+        "@raze__autocfg__0_1_8//:autocfg",
     ],
 )
 
 rust_library(
     name = "rand_pcg",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -74,6 +70,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=rand_pcg",
         "manual",
     ],
     version = "0.1.2",
