--- a/rust/raze/remote/BUILD.regex-syntax-0.6.27.bazel
+++ b/rust/raze/remote/BUILD.regex-syntax-0.6.27.bazel
@@ -34,12 +34,8 @@ licenses([
 # Unsupported target "bench" with type "bench" omitted
 
 rust_library(
-    name = "quote",
+    name = "regex_syntax",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "proc-macro",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -48,15 +44,11 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=regex-syntax",
         "manual",
     ],
-    version = "1.0.10",
+    version = "0.6.27",
     # buildifier: leave-alone
     deps = [
-        "@raze__proc_macro2__1_0_32//:proc_macro2",
     ],
 )
-
-# Unsupported target "compiletest" with type "test" omitted
-
-# Unsupported target "test" with type "test" omitted
