--- a/rust/raze/remote/BUILD.remove_dir_all-0.5.3.bazel
+++ b/rust/raze/remote/BUILD.remove_dir_all-0.5.3.bazel
@@ -31,31 +31,32 @@ licenses([
 
 # Generated Targets
 
-# Unsupported target "thread_notify" with type "bench" omitted
-
 rust_library(
-    name = "futures_executor",
+    name = "remove_dir_all",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "std",
-    ],
+    aliases = {
+    },
     crate_root = "src/lib.rs",
     data = [],
-    edition = "2018",
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-raze",
+        "crate-name=remove_dir_all",
         "manual",
     ],
-    version = "0.3.18",
+    version = "0.5.3",
     # buildifier: leave-alone
     deps = [
-        "@raze__futures_core__0_3_18//:futures_core",
-        "@raze__futures_task__0_3_18//:futures_task",
-        "@raze__futures_util__0_3_18//:futures_util",
-    ],
+    ] + selects.with_or({
+        (
+            "@rules_rust//rust/platform:i686-pc-windows-msvc",
+            "@rules_rust//rust/platform:x86_64-pc-windows-msvc",
+        ): [
+            "@raze__winapi__0_3_9//:winapi",
+        ],
+        "//conditions:default": [],
+    }),
 )
-
-# Unsupported target "local_pool" with type "test" omitted
