--- a/rust/raze/remote/BUILD.safemem-0.3.3.bazel
+++ b/rust/raze/remote/BUILD.safemem-0.3.3.bazel
@@ -34,10 +34,6 @@ licenses([
 rust_library(
     name = "safemem",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -46,6 +42,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=safemem",
         "manual",
     ],
     version = "0.3.3",
