--- a/rust/raze/remote/BUILD.syn-1.0.98.bazel
+++ b/rust/raze/remote/BUILD.syn-1.0.98.bazel
@@ -42,16 +42,6 @@ cargo_build_script(
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "quote",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2018",
@@ -62,7 +52,7 @@ cargo_build_script(
         "cargo-raze",
         "manual",
     ],
-    version = "1.0.82",
+    version = "1.0.98",
     visibility = ["//visibility:private"],
     deps = [
     ],
@@ -75,16 +65,6 @@ cargo_build_script(
 rust_library(
     name = "syn",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "quote",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -93,17 +73,20 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=syn",
         "manual",
     ],
-    version = "1.0.82",
+    version = "1.0.98",
     # buildifier: leave-alone
     deps = [
         ":syn_build_script",
-        "@raze__proc_macro2__1_0_32//:proc_macro2",
-        "@raze__quote__1_0_10//:quote",
-        "@raze__unicode_xid__0_2_2//:unicode_xid",
+        "@raze__proc_macro2__1_0_40//:proc_macro2",
+        "@raze__quote__1_0_20//:quote",
+        "@raze__unicode_ident__1_0_1//:unicode_ident",
     ],
 )
+
+# Unsupported target "regression" with type "test" omitted
 
 # Unsupported target "test_asyncness" with type "test" omitted
 
