--- a/rust/raze/remote/BUILD.tls-api-0.4.0.bazel
+++ b/rust/raze/remote/BUILD.tls-api-0.4.0.bazel
@@ -34,8 +34,6 @@ licenses([
 rust_library(
     name = "tls_api",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -44,12 +42,13 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=tls-api",
         "manual",
     ],
     version = "0.4.0",
     # buildifier: leave-alone
     deps = [
-        "@raze__log__0_4_14//:log",
+        "@raze__log__0_4_17//:log",
         "@raze__tokio__0_2_25//:tokio",
     ],
 )
