--- a/rust/raze/remote/BUILD.tls-api-stub-0.4.0.bazel
+++ b/rust/raze/remote/BUILD.tls-api-stub-0.4.0.bazel
@@ -34,8 +34,6 @@ licenses([
 rust_library(
     name = "tls_api_stub",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -44,6 +42,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=tls-api-stub",
         "manual",
     ],
     version = "0.4.0",
