--- a/rust/raze/remote/BUILD.tokio-0.2.25.bazel
+++ b/rust/raze/remote/BUILD.tokio-0.2.25.bazel
@@ -36,25 +36,6 @@ rust_library(
     srcs = glob(["**/*.rs"]),
     aliases = {
     },
-    crate_features = [
-        "default",
-        "dns",
-        "io-driver",
-        "io-util",
-        "iovec",
-        "lazy_static",
-        "libc",
-        "memchr",
-        "mio",
-        "mio-uds",
-        "net",
-        "rt-core",
-        "slab",
-        "tcp",
-        "time",
-        "udp",
-        "uds",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -63,6 +44,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=tokio",
         "manual",
     ],
     version = "0.2.25",
@@ -71,12 +53,11 @@ rust_library(
         "@raze__bytes__0_5_6//:bytes",
         "@raze__iovec__0_1_4//:iovec",
         "@raze__lazy_static__1_4_0//:lazy_static",
-        "@raze__memchr__2_4_1//:memchr",
+        "@raze__memchr__2_5_0//:memchr",
         "@raze__mio__0_6_23//:mio",
         "@raze__pin_project_lite__0_1_12//:pin_project_lite",
-        "@raze__slab__0_4_5//:slab",
+        "@raze__slab__0_4_6//:slab",
     ] + selects.with_or({
-        # cfg(unix)
         (
             "@rules_rust//rust/platform:i686-apple-darwin",
             "@rules_rust//rust/platform:i686-unknown-linux-gnu",
@@ -84,9 +65,11 @@ rust_library(
             "@rules_rust//rust/platform:x86_64-unknown-linux-gnu",
             "@rules_rust//rust/platform:aarch64-apple-darwin",
             "@rules_rust//rust/platform:aarch64-apple-ios",
+            "@rules_rust//rust/platform:aarch64-apple-ios-sim",
             "@rules_rust//rust/platform:aarch64-linux-android",
             "@rules_rust//rust/platform:aarch64-unknown-linux-gnu",
             "@rules_rust//rust/platform:arm-unknown-linux-gnueabi",
+            "@rules_rust//rust/platform:armv7-linux-androideabi",
             "@rules_rust//rust/platform:i686-linux-android",
             "@rules_rust//rust/platform:i686-unknown-freebsd",
             "@rules_rust//rust/platform:powerpc-unknown-linux-gnu",
@@ -95,7 +78,7 @@ rust_library(
             "@rules_rust//rust/platform:x86_64-linux-android",
             "@rules_rust//rust/platform:x86_64-unknown-freebsd",
         ): [
-            "@raze__libc__0_2_108//:libc",
+            "@raze__libc__0_2_126//:libc",
             "@raze__mio_uds__0_6_8//:mio_uds",
         ],
         "//conditions:default": [],
