--- a/rust/raze/remote/BUILD.unicode-ident-1.0.1.bazel
+++ b/rust/raze/remote/BUILD.unicode-ident-1.0.1.bazel
@@ -31,11 +31,11 @@ licenses([
 
 # Generated Targets
 
-rust_proc_macro(
-    name = "futures_macro",
+# Unsupported target "xid" with type "bench" omitted
+
+rust_library(
+    name = "unicode_ident",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2018",
@@ -44,13 +44,15 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=unicode-ident",
         "manual",
     ],
-    version = "0.3.18",
+    version = "1.0.1",
     # buildifier: leave-alone
     deps = [
-        "@raze__proc_macro2__1_0_32//:proc_macro2",
-        "@raze__quote__1_0_10//:quote",
-        "@raze__syn__1_0_82//:syn",
     ],
 )
+
+# Unsupported target "compare" with type "test" omitted
+
+# Unsupported target "static_size" with type "test" omitted
