--- a/rust/raze/remote/BUILD.unix_socket-0.5.0.bazel
+++ b/rust/raze/remote/BUILD.unix_socket-0.5.0.bazel
@@ -34,8 +34,6 @@ licenses([
 rust_library(
     name = "unix_socket",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -44,12 +42,13 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=unix_socket",
         "manual",
     ],
     version = "0.5.0",
     # buildifier: leave-alone
     deps = [
         "@raze__cfg_if__0_1_10//:cfg_if",
-        "@raze__libc__0_2_108//:libc",
+        "@raze__libc__0_2_126//:libc",
     ],
 )
