--- a/rust/raze/remote/BUILD.void-1.0.2.bazel
+++ b/rust/raze/remote/BUILD.void-1.0.2.bazel
@@ -34,10 +34,6 @@ licenses([
 rust_library(
     name = "void",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -46,6 +42,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=void",
         "manual",
     ],
     version = "1.0.2",
