--- a/rust/raze/remote/BUILD.winapi-0.3.9.bazel
+++ b/rust/raze/remote/BUILD.winapi-0.3.9.bazel
@@ -42,17 +42,6 @@ cargo_build_script(
     srcs = glob(["**/*.rs"]),
     build_script_env = {
     },
-    crate_features = [
-        "handleapi",
-        "minwindef",
-        "ntsecapi",
-        "profileapi",
-        "winnt",
-        "winsock2",
-        "ws2def",
-        "ws2ipdef",
-        "ws2tcpip",
-    ],
     crate_root = "build.rs",
     data = glob(["**"]),
     edition = "2015",
@@ -72,17 +61,6 @@ cargo_build_script(
 rust_library(
     name = "winapi",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-        "handleapi",
-        "minwindef",
-        "ntsecapi",
-        "profileapi",
-        "winnt",
-        "winsock2",
-        "ws2def",
-        "ws2ipdef",
-        "ws2tcpip",
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -91,6 +69,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=winapi",
         "manual",
     ],
     version = "0.3.9",
