--- a/rust/raze/remote/BUILD.winapi-build-0.1.1.bazel
+++ b/rust/raze/remote/BUILD.winapi-build-0.1.1.bazel
@@ -43,8 +43,6 @@ alias(
 rust_library(
     name = "build",
     srcs = glob(["**/*.rs"]),
-    crate_features = [
-    ],
     crate_root = "src/lib.rs",
     data = [],
     edition = "2015",
@@ -53,6 +51,7 @@ rust_library(
     ],
     tags = [
         "cargo-raze",
+        "crate-name=build",
         "manual",
     ],
     version = "0.1.1",
